# LLMTextCore

./: CMakeLists.txt  LICENSE  llmtextcore.cpp  llmtextcore.def  llmtextcore.h  llmtextcore_cli.c  readme.md
